<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_connect"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectActivity"
    android:background="#eeee">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro_text"
                android:textSize="25dp"
                android:paddingLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/port_label"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:textSize="24dp"/>

                <EditText
                    android:id="@+id/port_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingLeft="15dp"
                    android:maxLines="1"
                    android:layout_weight="3"
                    android:text="5001"
                    android:textSize="24dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/connect_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/connect_button"
        android:textSize="30dp"
        android:textColor="#fff"
        android:backgroundTint="@color/colorButton"
        style="@android:style/Widget.Material.Button"
        android:elevation="4dp"
        android:textAppearance="@android:style/TextAppearance.Material.Button"/>

</LinearLayout>