<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eeee">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/state_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/state_label"
                    android:textSize="25dp"/>

                <TextView
                    android:id="@+id/state_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="10dp"
                    android:textSize="25dp"
                    tools:text="Listening..."/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ip_adress_label"
                    android:textSize="25dp"
                    android:id="@+id/textView"/>

                <TextView
                    android:id="@+id/ip_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:textSize="28dp"
                    tools:text="192.168.1.1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/port_label"
                    android:textSize="25dp"/>

                <TextView
                    android:id="@+id/port_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_gravity="center_horizontal"
                    android:paddingLeft="10dp"
                    android:textSize="25dp"
                    tools:text="5001"/>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/sensor_cfg_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            android:paddingBottom="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/configuration_label"
                android:gravity="center_vertical"
                android:textSize="25dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/configurations_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:layout_weight="1"
                    tools:text="Default">

                </Spinner>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/new_configuration_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add"
                    app:backgroundTint="@color/colorAccent"/>

            </LinearLayout>
        </LinearLayout>


    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/start_sensing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start_sensing_button"
        android:layout_marginTop="15dp"
        android:textSize="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:elevation="8dp"
        style="@android:style/Widget.Material.Button"
        android:backgroundTint="@color/colorButton"
        android:textColor="@android:color/background_light"/>


</LinearLayout>